--- a/app/templates/choose.html
+++ b/app/templates/choose.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
     <script >
         $(function(){
 
@@ -48,13 +49,14 @@
 <body>
     {{ form.hidden_tag() }}
     <form method="post" action="{{ url_for('handle_data') }}" novalidate>
-        <select name="category1" id="category1">
+        <h1 class="choose">Оберіть розклад</h1>
+        <div class="selector"><select name="category1" id="category1">
             <option value="">Оберіть варіант</option>
-            <option value="groups">групи</option>
-            <option value="teachers">викладача</option>
-        </select>
-        <select disabled="disabled" class="subcat" id="category2" name="category2">
-            <option value>Оберіть варіант</option>
+            <option value="groups">Група</option>
+            <option value="teachers">Викладач</option>
+        </select></div>
+        <div class="selector"><select disabled="disabled" class="subcat" id="category2" name="category2">
+
             <!-- Groups -->
             <optgroup data-rel="groups">
               {% for group in groups %}
@@ -67,7 +69,7 @@
                 <option value="{{teacher}}">{{teacher}}</option>
               {% endfor %}
             </optgroup>
-        </select>
+        </select></div>
       {{ form.submit }}
     </form>
 </body>
