--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -7,6 +7,13 @@ h1 {
     margin-bottom: auto;
 }
 
+h2 {
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: auto;
+}
+
 .choose {
     margin-top: 10%;
 }
